feat: Add Cloudflare Web Analytics script to BaseLayout

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -50,6 +50,10 @@ const pageLang = isGerman ? 'de' : lang;
     <!-- Favicon -->
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "18c2944ca68243ab9c61ee755d7324fa"}'></script>
+    <!-- End Cloudflare Web Analytics -->
+
     <!-- Lucide Icons -->
     <script src="https://unpkg.com/lucide@latest"></script>
   </head>
